--- a/Recup-AirLeBolD'air/index.html
+++ b/Recup-AirLeBolD'air/index.html
@@ -43,28 +43,34 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<h2>Recup-Air</h2>
+							<p>Un peu de liberté dans<br />
+							votre entreprise<br />
+							donné lui de l'Open Sources <a href="#">Recup-r</a>.</p>
 							<ul class="actions">
-								<li><a href="#" class="button special">Activate</a></li>
+								<li><a href="#" class="button special">Qui somme Nous</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">En savoir plus</a>
 					</section>
 
 				<!-- One -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Le but de cette entreprise est de redonner de la valeur à nos dechet
+									informatique et plus particulièrement au ancien parc informatique de grande entreprise.
+									 <br />pour pouvoir ensuite les remettre en état avec des systèmes open sources sur
+									  ces machine qui au bout du compte n’auront presque rien coûté.
+
+								</h2>
+								<p> cette idée et une idée de départ qui n'est pas faite pour gagner de l’argent<br />
+									et pour moi ce n’est pas de me remplir
+								les poches que je veux avec cette idée<br />
+								j’ai d’autre idée qui elle vont faire des troues dans les poches de ce qui les ont bien rempli</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
+								<li><span class="icon fa"><span class="label">Lorem</span></span></li>
 								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
 							</ul>
